cmake_minimum_required(VERSION 2.8)

set(CMAKE_CXX_STANDARD 14)

set(1.3.3 1.3.3.cpp)
add_executable(1.3.3 ${1.3.3})

set(1.3.4 1.3.4.cpp)
add_executable(1.3.4 ${1.3.4})

set(1.3.5 1.3.5.cpp)
add_executable(1.3.5 ${1.3.5})

set(1.3.6 1.3.6.cpp)
add_executable(1.3.6 ${1.3.6})

set(1.3.7 1.3.7.cpp)
add_executable(1.3.7 ${1.3.7})

set(1.3.8 1.3.8.cpp)
add_executable(1.3.8 ${1.3.8})

set(1.3.9 1.3.9.cpp)
add_executable(1.3.9 ${1.3.9})

set(1.3.10 1.3.10.cpp)
add_executable(1.3.10 ${1.3.10})

set(1.3.11 1.3.11.cpp)
add_executable(1.3.11 ${1.3.11})

set(1.3.12 1.3.12.cpp)
add_executable(1.3.12 ${1.3.12})

set(1.3.13 1.3.13.cpp)
add_executable(1.3.13 ${1.3.13})

set(1.3.14 1.3.14.cpp)
add_executable(1.3.14 ${1.3.14})

set(1.3.15 1.3.15.cpp)
add_executable(1.3.15 ${1.3.15})

set(1.3.16 1.3.16.cpp)
add_executable(1.3.16 ${1.3.16})