cmake_minimum_required(VERSION 2.8)

set(CMAKE_CXX_STANDARD 14)

set(1.3.3 1.3.3.cpp)
add_executable(1.3.3 ${1.3.3})

set(1.3.4 1.3.4.cpp)
add_executable(1.3.4 ${1.3.4})

set(1.3.5 1.3.5.cpp)
add_executable(1.3.5 ${1.3.5})

set(1.3.6 1.3.6.cpp)
add_executable(1.3.6 ${1.3.6})

set(1.3.7 1.3.7.cpp)
add_executable(1.3.7 ${1.3.7})

set(1.3.8 1.3.8.cpp)
add_executable(1.3.8 ${1.3.8})

set(1.3.9 1.3.9.cpp)
add_executable(1.3.9 ${1.3.9})

set(1.3.10 1.3.10.cpp)
add_executable(1.3.10 ${1.3.10})

set(1.3.11 1.3.11.cpp)
add_executable(1.3.11 ${1.3.11})

set(1.3.12 1.3.12.cpp)
add_executable(1.3.12 ${1.3.12})

set(1.3.13 1.3.13.cpp)
add_executable(1.3.13 ${1.3.13})

set(1.3.14 1.3.14.cpp)
add_executable(1.3.14 ${1.3.14})

set(1.3.15 1.3.15.cpp)
add_executable(1.3.15 ${1.3.15})

set(1.3.16 1.3.16.cpp)
add_executable(1.3.16 ${1.3.16})

set(1.4.3 1.4.3.cpp)
add_executable(1.4.3 ${1.4.3})

set(1.4.4 1.4.4.cpp)
add_executable(1.4.4 ${1.4.4})

set(1.4.5 1.4.5.cpp)
add_executable(1.4.5 ${1.4.5})

set(1.4.6 1.4.6.cpp)
add_executable(1.4.6 ${1.4.6})

set(1.4.7 1.4.7.cpp)
add_executable(1.4.7 ${1.4.7})

set(1.4.8 1.4.8.cpp)
add_executable(1.4.8 ${1.4.8})

set(1.4.9 1.4.9.cpp)
add_executable(1.4.9 ${1.4.9})

set(1.4.10 1.4.10.cpp)
add_executable(1.4.10 ${1.4.10})

set(1.4.11 1.4.11.cpp)
add_executable(1.4.11 ${1.4.11})

set(1.4.12 1.4.12.cpp)
add_executable(1.4.12 ${1.4.12})

set(1.4.13 1.4.13.cpp)
add_executable(1.4.13 ${1.4.13})

set(1.4.14 1.4.14.cpp)
add_executable(1.4.14 ${1.4.14})

set(1.4.15 1.4.15.cpp)
add_executable(1.4.15 ${1.4.15})

set(1.4.16 1.4.16.cpp)
add_executable(1.4.16 ${1.4.16})

set(1.5.3 1.5.3.cpp)
add_executable(1.5.3 ${1.5.3})

set(1.5.4 1.5.4.cpp)
add_executable(1.5.4 ${1.5.4})

set(1.5.5 1.5.5.cpp)
add_executable(1.5.5 ${1.5.5})

set(1.5.6 1.5.6.cpp)
add_executable(1.5.6 ${1.5.6})

set(1.5.7 1.5.7.cpp)
add_executable(1.5.7 ${1.5.7})

set(1.5.8 1.5.8.cpp)
add_executable(1.5.8 ${1.5.8})

set(1.5.9 1.5.9.cpp)
add_executable(1.5.9 ${1.5.9})

set(1.5.10 1.5.10.cpp)
add_executable(1.5.10 ${1.5.10})

set(1.5.11 1.5.11.cpp)
add_executable(1.5.11 ${1.5.11})

set(1.5.12 1.5.12.cpp)
add_executable(1.5.12 ${1.5.12})

set(1.5.13 1.5.13.cpp)
add_executable(1.5.13 ${1.5.13})

set(1.5.14 1.5.14.cpp)
add_executable(1.5.14 ${1.5.14})

set(1.5.15 1.5.15.cpp)
add_executable(1.5.15 ${1.5.15})

set(1.5.16 1.5.16.cpp)
add_executable(1.5.16 ${1.5.16})